--- a/templates/company_dash.html
+++ b/templates/company_dash.html
@@ -1,12 +1,4 @@
-{% extends 'user_index.html'%} {% load static %} {% block content %}
-
-<style>
-    #companyimage{
-        width: 250px;
-        height: 250px;
-        display:;
-    }
-</style>
+{% extends 'company_index.html'%} {% load static %} {% block content %}
 
 <section id="welcome">
     <div class="section-inner">
@@ -219,7 +211,7 @@
                 <div class="row">
                     <ul class="owl-carousel-highlighted news-carousel fw-carousel list-unstyled" data-items="3" data-items-tablet="[768,2]"  data-items-mobile="[479,1]">
                         <li class="nopadding-lr hover-item">
-                            <img src="{% static 'assets/img/team/TCS.png' %}" class="img-responsive smoothie" id="companyimage" alt="">
+                            <img src="{% static 'assets/img/news/3.jpg' %}" class="img-responsive smoothie" alt="">
                             <div class="overlay-item-caption smoothie wow fadeIn" data-wow-delay="0.2s">
                                 <div class="vertical-center smoothie">
                                     <strong class="heading-font"><span class="theme-accent-color-bg">#1</span></strong>
@@ -232,7 +224,7 @@
                             </div>
                         </li>
                         <li class="nopadding-lr hover-item">
-                            <img src="{% static 'assets/img/team/WIPRO.jpg' %}" class="img-responsive smoothie" id="companyimage" alt="">
+                            <img src="{% static 'assets/img/news/4.jpg' %}" class="img-responsive smoothie" alt="">
                             <div class="overlay-item-caption smoothie wow fadeIn" data-wow-delay="0.2s">
                                 <div class="vertical-center smoothie">
                                     <strong class="heading-font"><span class="theme-accent-color-bg">#2</span></strong>
@@ -246,7 +238,7 @@
 
                         </li>
                         <li class="nopadding-lr hover-item">
-                            <img src="{% static 'assets/img/news/5.jpg' %}" class="img-responsive smoothie" id="companyimage" alt="">
+                            <img src="{% static 'assets/img/news/5.jpg' %}" class="img-responsive smoothie" alt="">
                             <div class="overlay-item-caption smoothie wow fadeIn" data-wow-delay="0.2s">
                                 <div class="vertical-center smoothie">
                                     <strong class="heading-font"><span class="theme-accent-color-bg">#3</span></strong>
