--- a/templates/login.html
+++ b/templates/login.html
@@ -59,7 +59,7 @@
                 <a href="{% url 'user_dash' %}" style="text-decoration:none"><button class="btn btn-block btn-success btn-lg font-weight-medium auth-form-btn">SIGN IN</button></a>
               </div>
               <div class="mt-3">
-                <a href="{% url 'register' %}" style="text-decoration:none"><button class="btn btn-block btn-info btn-lg font-weight-medium auth-form-btn">SIGN UP</button></a>
+                <a href="{% url 'user_register' %}" style="text-decoration:none"><button class="btn btn-block btn-info btn-lg font-weight-medium auth-form-btn">SIGN UP</button></a>
               </div>
             </div>
           </div>
