--- a/templates/user_view_companies.html
+++ b/templates/user_view_companies.html
@@ -4,51 +4,53 @@
     <div class="section-inner">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center mb100">                        
-                    <h2 class="section-heading"><span class="theme-accent-color">COMPANIES</span></h2>
-                </div>
-            </div>
-        </div>
-        
-        <div class="container">
-            <div class="row project-item">
-                <div class="col-sm-3">
-                    <p>1Behind sooner dining so window excuse he summer. Breakfast met certainty and fulfilled propriety led. Waited get either are wooded little her. Contrasted unreserved as mr particular collecting it everything as indulgence. Seems ask meant merry could put. Age old begin had boy noisy table front whole given.</p>
-                </div>
-                <div class="col-sm-9 mb60 wow fadeIn" data-wow-delay="0.2s">
+
+                <div class="col-sm-12 blog-item mb100 wow fadeIn" data-wow-delay="0.2s">
                     <div class="row">
-                        <div class="col-xs-12 single-post-content">                                
-                            <div class="hover-item gap">                                    
+                        <div class="col-xs-2">
+                            <div class="post-date heading-font">
+                                <span class="the-date">#1</span>
+                            </div>
+                        </div>
+                        <div class="col-xs-10">
+                            <h2 class="post-title">TCS</h2>
+                            {% comment %} <div class="item-metas text-muted mb30">
+                                <span class="meta-item"><i class="pe-icon pe-7s-folder"></i> POSTED IN <span class="secondary-font">News</span></span>
+                                <span class="meta-item"><i class="pe-icon pe-7s-ticket"></i> TAGS <span class="secondary-font">Photography</span></span>
+                                <span class="meta-item"><i class="pe-icon pe-7s-user"></i> AUTHOR <span class="secondary-font">Danny Jones</span></span>
+                                <span class="meta-item"><i class="pe-icon pe-7s-comment"></i> COMMENTS <span class="secondary-font">3</span></span>
+                            </div> {% endcomment %}
+                            <div class="hover-item mb30">                                    
                                 <img src="{% static 'assets/img/team/TCS.png' %}" class="img-responsive smoothie wow fadeIn" data-wow-delay="0.2s" alt="title">
+                                <div class="overlay-item-caption smoothie wow fadeIn" data-wow-delay="0.2s"></div>
+                                <div class="hover-item-caption smoothie">
+                                    <h3 class="vertical-center smoothie"><a href="https://www.tcs.com" class="smoothie btn btn-primary btn-white page-scroll" title="view article">View</a></h3>
+                                </div>
                             </div>
+                            <p>Behind sooner dining so window excuse he summer. Breakfast met certainty and fulfilled propriety led. Waited get either are wooded little her. Contrasted unreserved as mr particular collecting it everything as indulgence. Seems ask meant merry could put. Age old begin had boy noisy table front whole given.</p>
+                            <a class="btn btn-primary mt30" href="{% url 'user_view_company' %}"><i class="fa fa-long-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="row project-item">
-                <div class="col-sm-3">
-                    <p>2Behind sooner dining so window excuse he summer. Breakfast met certainty and fulfilled propriety led. Waited get either are wooded little her. Contrasted unreserved as mr particular collecting it everything as indulgence. Seems ask meant merry could put. Age old begin had boy noisy table front whole given.</p>
-                </div>
-                <div class="col-sm-9 mb60 wow fadeIn" data-wow-delay="0.2s">
+
+                <div class="col-sm-12 blog-item mb100 wow fadeIn" data-wow-delay="0.2s">
                     <div class="row">
-                        <div class="col-xs-12 single-post-content">                                
-                            <div class="hover-item gap">                                    
+                        <div class="col-xs-2">
+                            <div class="post-date heading-font">
+                                <span class="the-date">#2</span>
+                            </div>
+                        </div>
+                        <div class="col-xs-10">
+                            <h2 class="post-title">Wipro</h2>
+                            <div class="hover-item mb30">                                    
                                 <img src="{% static 'assets/img/team/WIPRO.jpg' %}" class="img-responsive smoothie wow fadeIn" data-wow-delay="0.2s" alt="title">
+                                <div class="overlay-item-caption smoothie wow fadeIn" data-wow-delay="0.2s"></div>
+                                <div class="hover-item-caption smoothie">
+                                    <h3 class="vertical-center smoothie"><a href="https://www.wipro.com" class="smoothie btn btn-primary btn-white page-scroll" title="view article">View</a></h3>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row project-item">
-                <div class="col-sm-3">
-                    <p>3Behind sooner dining so window excuse he summer. Breakfast met certainty and fulfilled propriety led. Waited get either are wooded little her. Contrasted unreserved as mr particular collecting it everything as indulgence. Seems ask meant merry could put. Age old begin had boy noisy table front whole given.</p>
-                </div>
-                <div class="col-sm-9 mb60 wow fadeIn" data-wow-delay="0.2s">
-                    <div class="row">
-                        <div class="col-xs-12 single-post-content">                                
-                            <div class="hover-item gap">                                    
-                                <img src="{% static 'assets/img/portfolio/portfolio9.jpg' %}" class="img-responsive smoothie wow fadeIn" data-wow-delay="0.2s" alt="title">
-                            </div>
+                            <p>Behind sooner dining so window excuse he summer. Breakfast met certainty and fulfilled propriety led. Waited get either are wooded little her. Contrasted unreserved as mr particular collecting it everything as indulgence. Seems ask meant merry could put. Age old begin had boy noisy table front whole given.</p>
+                            <a class="btn btn-primary mt30" href="https://www.wipro.com/"><i class="fa fa-long-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
