--- a/templates/company_index.html
+++ b/templates/company_index.html
@@ -59,16 +59,10 @@
                 <div class="collapse navbar-collapse" id="main-navigation">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="dropdown">
-                            <a href="{% url 'user_dash' %}" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown">HOME</a>
+                            <a href="#" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown">HOME</a>
                         </li>
                         <li class="dropdown">
-                            <a href="{% url 'company_dash' %}" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown">COMPANIES section</a>
-                        </li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown">FIND JOBS</a>
-                        </li>
-                        <li class="dropdown">
-                            <a href="{% url 'user_view_companies' %}" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown">COMPANIES</a>
+                            <a href="#" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown">CONTACT US</a>
                         </li>
                         {% comment %} <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown">JOBS <span class="pe-7s-angle-down"></span></a>
